# cleanrl-openenv

./: app.py  inference.py  pyproject.toml  requirements.txt
cleanrl/: Dockerfile  Hackathon1.ipynb  README.md  app (1).py  app.py  environment.py  graders.py  hackathon1.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
