%%writefile pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanrl-openenv"
version = "0.1.0"
description = "OpenEnv RL environment for data cleaning"
authors = [
    { name = "Sudharshini" },
    { name = "Yukesh K" },
    { name = "Shreya S" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "pydantic",
    "fastapi",
    "uvicorn",
    "scikit-learn",
    "scipy",
    "pyyaml",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cleanrl*"]
